[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/bullets/bullet.png" type="Texture" id=1]
[ext_resource path="res://scr/bullets/EnemyBullet.gd" type="Script" id=2]
[ext_resource path="res://assets/roundshadow.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.68611, 8.12854 )

[sub_resource type="Curve" id=2]
min_value = -0.12
_data = [ Vector2( 0, 1 ), 0.0, -1.12, 0, 1, Vector2( 1, -0.12 ), -1.12, 0.0, 1, 0 ]

[sub_resource type="Animation" id=3]
resource_name = "blow"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Light2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.04, 0.04 ), Vector2( 0.08, 0.08 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/Light2D:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="EnemyBullet" type="Area2D" groups=[
"enemy_bullet",
]]
input_pickable = false
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
collision_layer = 8
collision_mask = 25
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="Sprite"]
scale = Vector2( 0.04, 0.04 )
enabled = false
texture = ExtResource( 3 )
color = Color( 1, 0, 0, 1 )
energy = 2.0
range_layer_min = -100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
scale = Vector2( 0.35097, 0.29152 )
pause_animations = false
freeze_bodies = false
pause_particles = false
pause_animated_sprites = false

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2( -6, 0 )
amount = 40
lifetime = 0.5
speed_scale = 4.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 2.0
spread = 180.0
scale_amount = 3.0
scale_amount_curve = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blow = SubResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="viewport_exited" from="VisibilityEnabler2D" to="." method="_on_viewport_exited"]
